--- a/.github/workflows/django_test_CI.yml
+++ b/.github/workflows/django_test_CI.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pipenv shell
+        pip install pipenv
     - name: Run Tests
       run: |
         pipenv shell
