--- a/.github/workflows/django_test_CI.yml
+++ b/.github/workflows/django_test_CI.yml
@@ -23,8 +23,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        cat Pipfile
         python -m pip install --upgrade pip
         pip install pipenv
+        pipenv install
     - name: Run Tests
       run: |
         pipenv run python manage.py test
