added nohup to start server

--- a/.github/workflows/django_test_CI.yml
+++ b/.github/workflows/django_test_CI.yml
@@ -37,4 +37,5 @@ jobs:
     - name: Run Tests
       run: |
         pipenv run python manage.py test
+        nohup pipenv run python manage.py runserver 8080 > /dev/null 2>&1 &
         pipenv run python test/functional/functional_test.py
