updated CI pipeline to migrate database

--- a/.github/workflows/django_test_CI.yml
+++ b/.github/workflows/django_test_CI.yml
@@ -36,6 +36,7 @@ jobs:
         pipenv install
     - name: Run Tests
       run: |
+        pipenv run python manage.py makemigrations
         pipenv run python manage.py test
         nohup pipenv run python manage.py runserver 8080 > /dev/null 2>&1 &
         pipenv run python test/functional/functional_test.py
