--- a/.github/workflows/django_test_CI.yml
+++ b/.github/workflows/django_test_CI.yml
@@ -41,4 +41,4 @@ jobs:
         nohup pipenv run python manage.py runserver 8080 > /dev/null 2>&1 &
         ls -l
         chmod +x function_test.sh
-        ./function_test.sh
+        pipenv run ./function_test.sh
